@@ -3,6 +3,8 @@ AUTOMAKE_OPTIONS = foreign
 
 noinst_PROGRAMS = demo_plugin.so
 
-demo_plugin_so_SOURCES = demo_plugin.c
+demo_plugin_so_SOURCES = demo_plugin.c gnuplot_plugin.h
 demo_plugin_so_CFLAGS = -rdynamic -fPIC -I$(top_srcdir)/src
 demo_plugin_so_LDFLAGS = -shared
+
+EXTRA_DIST = plugin.dem
